--- a/code/project/years/years.scss
+++ b/code/project/years/years.scss
@@ -1,6 +1,6 @@
 @mixin years {
-  padding: 5vh 0;
-  
+  padding: 5vh 0 0;
+
   .year {
     @include year;
   }
